[build-system]
requires = [
    "setuptools==69.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "ds_store"
description = "Manipulate Finder .DS_Store files from Python"
readme = "README.rst"
requires-python = ">= 3.8"
license.text = "New BSD"
authors = [
    {name="Alastair Houghton", email="alastair@alastairs-place.net"}
]
maintainers = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"}
]
keywords = [
    "DS_Store"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mac_alias >= 2.0.1",
]

[project.urls]
Homepage = "http://alastairs-place.net/projects/ds_store"
Source = "https://github.com/dmgbuild/ds_store"

[project.scripts]
ds_store = "ds_store.__main__:main"

[project.optional-dependencies]
dev = [
    "coverage == 7.5.1",
    # Pre-commit 3.6.0 deprecated support for Python 3.8
    "pre-commit == 3.5.0 ; python_version < '3.9'",
    "pre-commit == 3.7.0 ; python_version >= '3.9'",
    "pytest == 8.2.0",
    "pytest-cov == 5.0.0",
    "tox == 4.15.0",
]
docs = [
    # Sphinx 7.2 deprecated support for Python 3.8
    "sphinx == 7.1.2 ; python_version < '3.9'",
    "sphinx == 7.3.7 ; python_version >= '3.9'",
    # Sphinx 2024.2.4 deprecated support for Python 3.8
    "sphinx-autobuild == 2021.3.14 ; python_version < '3.9'",
    "sphinx-autobuild == 2024.4.16 ; python_version >= '3.9'",
    "sphinx_rtd_theme == 2.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "ds_store.__version__"}

[tool.isort]
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true
skip_glob = [
    "docs/conf.py",
    "venv*",
    "local",
]
