[build-system]
requires = [
    "setuptools==70.3.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "ds_store"
description = "Manipulate Finder .DS_Store files from Python"
readme = "README.rst"
requires-python = ">= 3.8"
license.text = "New BSD"
authors = [
    {name="Alastair Houghton", email="alastair@alastairs-place.net"}
]
maintainers = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"}
]
keywords = [
    "DS_Store"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mac_alias >= 2.2.2",
]

[project.urls]
Documentation = "https://ds-store.readthedocs.io/en/latest/"
Homepage = "https://github.com/dmgbuild/ds_store"
Tracker = "https://github.com/dmgbuild/ds_store/issues"
Source = "https://github.com/dmgbuild/ds_store"

[project.scripts]
ds_store = "ds_store.__main__:main"

[project.optional-dependencies]
dev = [
    "coverage == 7.6.1",
    # Pre-commit 3.6.0 deprecated support for Python 3.8
    "pre-commit == 3.5.0 ; python_version < '3.9'",
    "pre-commit == 3.8.0 ; python_version >= '3.9'",
    "pytest == 8.3.2",
    "pytest-cov == 5.0.0",
    "tox == 4.17.1",
]
# Docs are always built on Py3.12; see RTD and tox config files.
docs = [
    "furo == 2024.7.18",
    "sphinx == 7.4.7",
    "sphinx-autobuild == 2024.4.16",
]

[tool.setuptools.dynamic]
version = {attr = "ds_store.__version__"}

[tool.isort]
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true
skip_glob = [
    "docs/conf.py",
    "venv*",
    "local",
]
