[metadata]
name = ds_store
version = attr: src.ds_store.__version__
url = http://alastairs-place.net/projects/ds_store
project_urls =
    Source = https://github.com/al45stair/ds_store
author = Alastair Houghton
author_email = alastair@alastairs-place.net
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Desktop Environment
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT License
license_file = LICENSE
description = macOS command line utility to build disk images
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    DS_Store
platforms = darwin

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
include_package_data = True
package_dir =
    = src
install_requires =
    mac_alias >= 2.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ds_store = ds_store.__main__:main

[aliases]
test=pytest

[flake8]
exclude=\
    */.eggs/*,\
    build/*,\
    .tox/*,\
    venv*

max-complexity = 25
max-line-length = 119
